--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -9,8 +9,8 @@ body {
 #app {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  background-color: var(--bs-page);
+  min-height: 100dvh;
+  justify-content: space-between;
 }
 
 main {
@@ -20,4 +20,3 @@ main {
 a {
   text-decoration: none;
 }
-
